updated server to get tags containing